# apple_calendar_mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml
config/: accounts.example.yaml
src/apple_calendar_multi_mcp/: __init__.py  __main__.py  config.py  icloud_api.py  models.py  server.py
src/apple_calendar_multi_mcp/auth/: protected_resource.py
src/apple_calendar_multi_mcp/tools/: __init__.py  accounts.py  calendars.py  common.py  events.py
